<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="sharedUserId" translate="false"><xliff:g id="x"></xliff:g></string>
    <string name="process" translate="false"><xliff:g id="x"></xliff:g></string>
    <string name="app_name">Turbo Launcher</string>
    <string name="default_theme">Default theme</string>
    <string name="uid_name">Android Core Apps</string>
    <string name="folder_name">Folder</string>
    <string name="contact_name">Contacts</string>
    <string name="chooser_wallpaper">Select wallpaper from</string>
    <string name="chooser_3dwidget">Complete action using</string>
    <string name="wallpaper_instructions">Set wallpaper</string>
    <string name="pick_wallpaper">Wallpapers</string>
    <string name="activity_not_found">Application is not installed on your phone.</string>
    <string name="activity_not_found_from_intent">No Application can handle this.</string>
    <string name="configure_wallpaper">Configure...</string>
    <string name="iloong_shellstr">Launcher Loading...</string>
    <string name="circle_autoSort">AutoSort</string>
    <string name="circle_iconOverlap">Overlap</string>
    <string name="circle_iconTrans">Translation</string>
    <string name="circle_multiSelect">MultiSelect</string>
    <string name="circle_createFolder">Create Folder</string>
    <string name="circle_deleteAll">DeleteAll</string>
    <string name="circle_noticeToast">Return to the origin to select</string>
    <string name="circle_dstOverToast">Beyond the trap range limit</string>
    <string name="circle_deleteALLToast">Sure to delete all?</string>
    <string name="circle_selectMutiToOperToast">Multiple icons operation</string>
    <string name="circle_notSupportToast">This version is temporarily unable to use this
		feature</string>
    <string name="circle_ok_action">OK</string>
    <string name="circle_cancel_action">Cancel</string>
    <string name="circle_unselectAppIconToast">No icon selected</string>
    <string name="rename_folder_label">Folder name</string>
    <string name="rename_folder_title">Rename Folder</string>
    <string name="rename_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="folder_hint_text">Unnamed Folder</string>
    <string name="folder3D_del_toast">Sure to delete this folder?</string>
    <string name="widget_download_content">Not yet installed on your phone, click OK to
		download and install!</string>
    <string name="apk_cannot_found_content">Cannot found APK for this application on your SD
		card!</string>
    <string name="folder3D_full">Folder is full</string>
    <string name="folder3D_name">Folder</string>
    <string name="menu_item_add_item"></string>
    <string name="group_applications">Applications</string>
    <string name="group_shortcuts">Shortcuts</string>
    <string name="group_folder">New folder</string>
    <string name="group_live_folders">Folder</string>
    <string name="group_widgets">Widgets</string>
    <string name="group_wallpapers">Wallpaper</string>
    <string name="group_3D_widgets">3D widgets</string>
    <string name="group_contacts">Contacts</string>
    <string name="add_folder">Folder</string>
    <string name="add_clock">Clock</string>
    <string name="add_photo_frame">Picture frame</string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="shortcut_installed">		Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>		\" created.</string>
    <string name="shortcut_uninstalled">		Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>		\" was removed.</string>
    <string name="shortcut_duplicate">		Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>		\" already exists.</string>
    <string name="title_select_shortcut">Select shortcut</string>
    <string name="title_select_application">Select application</string>
    <string name="title_select_live_folder">Select folder</string>
    <string name="all_apps_button_label">All applications</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an application to add
		shortcuts without user
		intervention.</string>
    <string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
    <string name="permdesc_uninstall_shortcut">Allows an application to remove
		shortcuts without
		user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows an application to read the settings and
		shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows an application to change the settings and
		shortcuts in Home.</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="default_browser_url" translatable="true">		http://www.google.com/m?client=ms-{CID}source=android-home-hotseat</string>
    <string name="errorHint">		A error has happened %1$s.Please click<i><b>"REPORT"</b></i>		to send the error information to us by email, Thanks!!!</string>
    <string name="hello">hello iLoong User</string>
    <string name="folder_renamed">Folder renamed to %1$s</string>
    <string name="folder_name_format">Folder: %1$s</string>
    <string name="can_not_add_widget">Can\'t add to this page</string>
    <string name="can_not_delete_page">The minimum number of screens has reached</string>
    <string name="delete_page">Page is not empty, sure to delete it?</string>
    <string name="appbar_tab_app">Apps</string>
    <string name="appbar_tab_widget">Widgets</string>
    <string name="appbar_tab_uninstall">Uninstall apps</string>
    <string name="appbar_tab_hide">Hide apps</string>
    <string name="appbar_tab_edit_mode">Editor Mode</string>
    <string name="sort_app_default">Sort by default</string>
    <string name="sort_app_init">Sort by factory data</string>
    <string name="sort_app_name">Sort by app name</string>
    <string name="sort_app_install_time">Sort by install time</string>
    <string name="app_bar_navigator_audioalbum">Audio</string>
    <string name="app_bar_navigator_video">Video</string>
    <string name="app_bar_navigator_photobucket">Photo</string>
    <string name="app_bar_title_photo">Photo</string>
    <string name="app_bar_title_audio">Song</string>
    <string name="sort_app_use_frequency">Sort by frequency of use</string>
    <string name="sort_dialog_title">Sort Icons</string>
    <string name="widget_empty_dialog">This 3D widget is not installed，please install and then add it</string>
    <string name="widget_empty_title">3D widget</string>
    <string name="widget_other_tools">Other tools</string>
    <string name="hotseat_mainmenu">Apps</string>
    <string name="hotseat_workspace">Home</string>
    <string name="main_menu">Main Menu</string>
    <string name="trash_icon_title">Delete</string>
    <string name="choose_widget">Choose widget</string>
    <string name="choose_widget_ex">Choose Tools</string>
    <string name="fold_name_too_long">Folder name exceeds the maximum length</string>
    <string name="app_downloading">Downloading</string>
    <string name="desktop_setting">Preferences</string>
    <string name="mostly_used">Most Used</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="theme">Themes</string>
    <string name="screen_editor">Editor</string>
    <string name="system_setting">Settings</string>
    <string name="update_check">Update </string>
    <string name="user_feedback">User Feedback</string>
<string name="ds_privacy_notice_title">Privacy Notice</string>
<string name="ds_privacy_notice_text">The system permissions we used does not disclose your private information, in order togive you more confidence to use Turbo Launcher ,we write this statement to describes how we use these permissions.</string>
<string name="ds_pn_1">Device &amp; app history</string>
<string name="ds_pn_1_detail">Record the used history of those applications, so we can show you the recently used applications more quickly.</string>
<string name="ds_pn_2">Mobile data settings</string>
<string name="ds_pn_2_detail">We used this function in network switches on dock bar.</string>
<string name="ds_pn_3">Contacts / Calendar</string>
<string name="ds_pn_3_detail">This permission will be used when you add contact shortcut on the launcher.
      Calendar widget will read the schedule, and displayed in the calendar widget and facilitate access you to view.</string>
<string name="ds_pn_4">Location</string>
<string name="ds_pn_4_detail">We used this function in GPS positioning on dock bar.</string>
<string name="ds_pn_5">Phone</string>
<string name="ds_pn_5_detail">With this function, you can click to dial contactsdirectly when you add contacts shortcuts on desktop.</string>
<string name="ds_pn_6">Photos / Media / Files </string>
<string name="ds_pn_6_detail">This permission is used to start the installation on SD card to store applications and wallpaper. They are the basic functions of Android launcher.</string>
<string name="ds_pn_7">Wi-Fi connection information</string>
<string name="ds_pn_7_detail">We used this function in .Wi-Fi switch on dock bar.</string>
<string name="ds_pn_8">Device ID &amp; call information</string>
<string name="ds_pn_8_detail">In order to provide user a better product, we use this permission to collect some data for analyze the user experience, such as: What kind of wallpaper you like best.</string>
<string name="ds_pn_9">Other</string>
<string name="ds_pn_9_1">access check-in properties</string>
<string name="ds_pn_9_2">adjust your wallpaper size</string>
<string name="ds_pn_9_3">choose widgets</string>
<string name="ds_pn_9_4">access SurfaceFlinger</string>
<string name="ds_pn_9_5">view network connections</string>
<string name="ds_pn_9_6">connect and disconnect from Wi-Fi</string>
<string name="ds_pn_9_7">mock location sources for testing</string>
<string name="ds_pn_9_8">prevent device from sleeping</string>
<string name="ds_pn_9_9">pair with Bluetooth devices</string>
<string name="ds_pn_9_10">access Bluetooth settings</string>
<string name="ds_pn_9_11">expand/collapse status bar</string>
<string name="ds_pn_9_12">set wallpaper</string>
<string name="ds_pn_9_13">control vibration</string>
<string name="ds_pn_9_14">modify system settings</string>
<string name="ds_pn_9_15">full network access</string>
<string name="ds_pn_9_16">close other apps</string>
<string name="ds_pn_9_17">change network connectivity</string>
<string name="ds_pn_9_18">send sticky broadcast</string>
<string name="ds_pn_end"> We use these permissions offers many useful functions , such as shortcuts bar, clock, calendar and a key clean-up and so on.</string>
<string name="addition">Extensions</string>
<string name="rate_string_1">Please give Turbo praise</string>
<string name="rate_string_2">Hello, if you like Turbo,\nplease give us a five-star praise.</string>
<string name="rate_string_3">Go to praise</string>
<string name="rate_string_4">Don\'t want to go</string>
<string name="ds_default_set">Set</string>
<string name="ds_default_dismiss">Dismiss</string>
<string name="ds_default_clear_title">Clear default setting</string>
<string name="ds_default_tips">are you sure to clear default setting </string>
</resources>