<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BigBackgroundColor"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/privacy_notice_backll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dstopbackground"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:src="@drawable/dsback_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/ds_privacy_notice_title"
            android:textColor="@color/TitleColor"
            android:textSize="20sp" />
    </LinearLayout>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:orientation="vertical" >
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_margin="10dp"
		            android:text="@string/ds_privacy_notice_text"
		            android:textStyle="bold"
		            android:textColor="#333333"
		            android:textSize="18sp" />
		       <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_margin="10dp"
		            android:text="@string/ds_pn_1"
		            android:textStyle="bold"
		            android:textColor="#333333"
		            android:textSize="18sp" />
		       <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_margin="10dp"
		            android:text="@string/ds_pn_1_detail"
		            android:textColor="#333333"
		            android:textSize="18sp" />
		       <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_margin="10dp"
		            android:text="@string/ds_pn_2"
		            android:textStyle="bold"
		            android:textColor="#333333"
		            android:textSize="18sp" />
		       <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_margin="10dp"
		            android:text="@string/ds_pn_2_detail"
		            android:textColor="#333333"
		            android:textSize="18sp" />	        
		       <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_margin="10dp"
		            android:text="@string/ds_pn_3"
		            android:textStyle="bold"
		            android:textColor="#333333"
		            android:textSize="18sp" />
		       <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_margin="10dp"
		            android:text="@string/ds_pn_3_detail"
		            android:textColor="#333333"
		            android:textSize="18sp" />	 		            
		       <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_margin="10dp"
		            android:text="@string/ds_pn_4"
		            android:textStyle="bold"
		            android:textColor="#333333"
		            android:textSize="18sp" />
		       <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_margin="10dp"
		            android:text="@string/ds_pn_4_detail"
		            android:textColor="#333333"
		            android:textSize="18sp" />	 	        
		       <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_margin="10dp"
		            android:text="@string/ds_pn_5"
		            android:textStyle="bold"
		            android:textColor="#333333"
		            android:textSize="18sp" />
		       <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_margin="10dp"
		            android:text="@string/ds_pn_5_detail"
		            android:textColor="#333333"
		            android:textSize="18sp" />	 
		       <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_margin="10dp"
		            android:text="@string/ds_pn_6"
		            android:textStyle="bold"
		            android:textColor="#333333"
		            android:textSize="18sp" />
		       <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_margin="10dp"
		            android:text="@string/ds_pn_6_detail"
		            android:textColor="#333333"
		            android:textSize="18sp" />	 
		       <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_margin="10dp"
		            android:text="@string/ds_pn_7"
		            android:textStyle="bold"
		            android:textColor="#333333"
		            android:textSize="18sp" />
		       <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_margin="10dp"
		            android:text="@string/ds_pn_7_detail"
		            android:textColor="#333333"
		            android:textSize="18sp" />	 
		       <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_margin="10dp"
		            android:text="@string/ds_pn_8"
		            android:textStyle="bold"
		            android:textColor="#333333"
		            android:textSize="18sp" />
		       <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_margin="10dp"
		            android:text="@string/ds_pn_8_detail"
		            android:textColor="#333333"
		            android:textSize="18sp" />	 
		       <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_margin="10dp"
		            android:text="@string/ds_pn_9"
		            android:textStyle="bold"
		            android:textColor="#333333"
		            android:textSize="18sp" />
		       <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginTop="10dp"
		            android:layout_marginLeft="10dp"
		            android:layout_marginRight="10dp"
		            android:text="@string/ds_pn_9_1"
		            android:textColor="#333333"
		            android:textSize="18sp" />
		       <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="10dp"
		            android:layout_marginRight="10dp"
		            android:text="@string/ds_pn_9_2"
		            android:textColor="#333333"
		            android:textSize="18sp" />
		       <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="10dp"
		            android:layout_marginRight="10dp"
		            android:text="@string/ds_pn_9_3"
		            android:textColor="#333333"
		            android:textSize="18sp" />
		       <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="10dp"
		            android:layout_marginRight="10dp"
		            android:text="@string/ds_pn_9_4"
		            android:textColor="#333333"
		            android:textSize="18sp" />
		       <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="10dp"
		            android:layout_marginRight="10dp"
		            android:text="@string/ds_pn_9_5"
		            android:textColor="#333333"
		            android:textSize="18sp" />
		       <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="10dp"
		            android:layout_marginRight="10dp"
		            android:text="@string/ds_pn_9_6"
		            android:textColor="#333333"
		            android:textSize="18sp" />
		       <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="10dp"
		            android:layout_marginRight="10dp"
		            android:text="@string/ds_pn_9_7"
		            android:textColor="#333333"
		            android:textSize="18sp" />
		       <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="10dp"
		            android:layout_marginRight="10dp"
		            android:text="@string/ds_pn_9_8"
		            android:textColor="#333333"
		            android:textSize="18sp" />
		       <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="10dp"
		            android:layout_marginRight="10dp"
		            android:text="@string/ds_pn_9_9"
		            android:textColor="#333333"
		            android:textSize="18sp" />
		       <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="10dp"
		            android:layout_marginRight="10dp"
		            android:text="@string/ds_pn_9_10"
		            android:textColor="#333333"
		            android:textSize="18sp" />
		       <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="10dp"
		            android:layout_marginRight="10dp"
		            android:text="@string/ds_pn_9_11"
		            android:textColor="#333333"
		            android:textSize="18sp" />
		       <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="10dp"
		            android:layout_marginRight="10dp"
		            android:text="@string/ds_pn_9_12"
		            android:textColor="#333333"
		            android:textSize="18sp" />
		       <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="10dp"
		            android:layout_marginRight="10dp"
		            android:text="@string/ds_pn_9_13"
		            android:textColor="#333333"
		            android:textSize="18sp" />
		       <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="10dp"
		            android:layout_marginRight="10dp"
		            android:text="@string/ds_pn_9_14"
		            android:textColor="#333333"
		            android:textSize="18sp" />
		       <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="10dp"
		            android:layout_marginRight="10dp"
		            android:text="@string/ds_pn_9_15"
		            android:textColor="#333333"
		            android:textSize="18sp" />
		       <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="10dp"
		            android:layout_marginRight="10dp"
		            android:text="@string/ds_pn_9_16"
		            android:textColor="#333333"
		            android:textSize="18sp" />
		       <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="10dp"
		            android:layout_marginRight="10dp"
		            android:text="@string/ds_pn_9_17"
		            android:textColor="#333333"
		            android:textSize="18sp" />
		       <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="10dp"
		            android:layout_marginRight="10dp"
		            android:text="@string/ds_pn_9_18"
		            android:textColor="#333333"
		            android:textSize="18sp" />
		       <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_margin="10dp"
		            android:text="@string/ds_pn_end"
		            android:textColor="#333333"
		            android:textSize="18sp" />	 		       		       		       		       		       		       		       		       		       		       		       		       		       		       		       
            </LinearLayout>
    </ScrollView>
</LinearLayout>