<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/setdefault_up"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
              android:id="@+id/dsclear_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ds_default_clear_title"
            android:textColor="#ffffff"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/setdefault_middle"
        android:gravity="center" >

        <TextView
            android:id="@+id/dsclear_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
           	android:text="@string/ds_default_tips"
            android:textSize="17dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:background="@drawable/setdefault_down"
        android:orientation="horizontal" >
<!--  android:background="@drawable/dsclear_selector" -->
      
        <LinearLayout
            
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/dsclear_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:gravity="center"
                    android:textColor="@color/dsclear_selector"
                android:layout_gravity="center_vertical"
               	android:text="@string/ds_default_dismiss"
                android:textSize="17dp" />
        </LinearLayout>
        

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ds_dv" />

          <LinearLayout
          
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:clickable="true"
          
            >

            <TextView
                android:id="@+id/dsclear_yes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
             	android:text="@string/ds_default_set"
                android:textColor="@color/dsclear_selector"
                android:textSize="17dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>