<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:background="@drawable/dsratewhitebg">
		<TextView
	       android:layout_width="match_parent"
	       android:layout_height="40dp"
	       android:gravity="center"
	       android:text="@string/rate_string_1"
	       android:textSize="18sp"
	       android:textColor="#5e5e5e" />
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
		    <LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:orientation="horizontal">
			    <ImageView
			        android:id="@+id/rate_star_1"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:src="@drawable/rate_star_anim_1">
			    </ImageView>
			    <ImageView
			        android:id="@+id/rate_star_2"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="10dp"
			        android:src="@drawable/rate_star_anim_2">
			    </ImageView>
			    <ImageView
			        android:id="@+id/rate_star_3"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="10dp"
			        android:src="@drawable/rate_star_anim_3">
			    </ImageView>
			    <ImageView
			        android:id="@+id/rate_star_4"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="10dp"
			        android:src="@drawable/rate_star_anim_4">
			    </ImageView>
			    <ImageView
			        android:id="@+id/rate_star_5"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="10dp"
			        android:src="@drawable/rate_star_anim_5">
			    </ImageView>
		    </LinearLayout>
		</LinearLayout>
		<TextView
	       android:layout_width="match_parent"
	       android:layout_height="50dp"
	       android:gravity="center"
	       android:text="@string/rate_string_2"
	       android:textSize="14sp"
	       android:textColor="#7f7f7f" />
	</LinearLayout>
	<Button 
	    android:id="@+id/button_rate_1"
	    android:layout_width="match_parent"
	    android:layout_height="50dp"
	    android:background="@drawable/button_rate_selector_up"
	    android:text="@string/rate_string_3"
	    android:textSize="18sp"
	    android:textColor="#ffffff"
	    android:gravity="center"/>
	<View  
	       android:layout_width="match_parent"
	       android:layout_height="0dp"
	       android:background="@drawable/dsratedivider"/>
	<Button
	    android:id="@+id/button_rate_2" 
	    android:layout_width="match_parent"
	    android:layout_height="60dp"
	    android:background="@drawable/button_rate_selector_down"
	    android:text="@string/rate_string_4"
	    android:textSize="18sp"
	    android:gravity="center"
	    android:textColor="#ffffff"/>

</LinearLayout>